--- a/styles/main.css
+++ b/styles/main.css
@@ -52,6 +52,14 @@ body {
   background: orange;
 }
 
+.grid div.firstGhost {
+  background-image: url(../assets/pacmanspritesheet.png);
+  background-size: 600px;
+  /* properties to be edited to animate the sprite */
+  background-position-x: -12px;
+  background-position-y: -160px;
+}
+
 
 /* .grid div.player[data-direction="forward"] {
   transform: scaleX(1)
