--- a/styles/main.css
+++ b/styles/main.css
@@ -42,10 +42,18 @@ body {
 
 .grid div.pill {
   background-image: url(../assets/pacmanspritesheet.png);
-  background-size: 600px;
+  background-size: 400px;
   /* properties to be edited to animate the sprite */
-  background-position-x: -2px;
-  background-position-y: -335px;
+  background-position-x: 10px;
+  background-position-y: -223px;
+}
+
+.grid div.energizer {
+  background-image: url(../assets/pacmanspritesheet.png);
+  background-size: 900px;
+  /* properties to be edited to animate the sprite */
+  background-position-x: -10px;
+  background-position-y: -515px;
 }
 
 .grid div.wall {
