--- a/styles/main.css
+++ b/styles/main.css
@@ -92,6 +92,13 @@ body {
   background-position-y: -270px;
 }
 
+.grid div.frightened {
+  background-image: url(../assets/pacmanspritesheet.png);
+  background-size: 600px;
+  /* properties to be edited to animate the sprite */
+  background-position-x: -12px;
+  background-position-y: -310px;
+}
 
 /* .grid div.player[data-direction="forward"] {
   transform: scaleX(1)
